[gd_scene load_steps=10 format=3 uid="uid://bxjscptjxba08"]

[ext_resource type="Script" path="res://enemy_fish/shark/shark.gd" id="1_slxds"]
[ext_resource type="Texture2D" uid="uid://dhqvsutrwfwhp" path="res://assets/art/enemy_fish/shark/Shark-sheet.png" id="2_ejfca"]
[ext_resource type="AudioStream" uid="uid://isgpu72jl1y5" path="res://assets/sounds/shark_nearby.mp3" id="3_txk3q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ilf72"]
size = Vector2(684, 356)

[sub_resource type="AtlasTexture" id="AtlasTexture_805yu"]
atlas = ExtResource("2_ejfca")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mof0v"]
atlas = ExtResource("2_ejfca")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q15fj"]
atlas = ExtResource("2_ejfca")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rohjr"]
atlas = ExtResource("2_ejfca")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_rorur"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_805yu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mof0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q15fj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rohjr")
}],
"loop": true,
"name": &"shark_swim",
"speed": 5.0
}]

[node name="shark" type="Area2D"]
collision_layer = 8
collision_mask = 264
script = ExtResource("1_slxds")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -30)
shape = SubResource("RectangleShape2D_ilf72")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1.00006, -1)
scale = Vector2(10.6836, 9.50975)
sprite_frames = SubResource("SpriteFrames_rorur")
animation = &"shark_swim"
frame = 1
frame_progress = 0.087295

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="near_sub" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_txk3q")
parameters/looping = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
